unit template razor fix

--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -8,7 +8,7 @@
 <Unit Component="Entry.Plc.Context.UnitTemplate"
       DataManger="Entry.Plc.Context.UnitTemplateProcessData"
       Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload"
-      DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Shared">
+      DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity">
     <ChildContent>
         <img src="logo-header.svg" />
     </ChildContent>
