--- a/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
+++ b/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
@@ -105,6 +105,9 @@
         {
             return new (StandardUnit, string, string)[]
             { 
+                // (new StandardUnit(Entry.Plc.Context.Cu1),"Context/Units/Cu1", "logo-header.svg"),
+                // (new StandardUnit(Entry.Plc.Context.Cu2),"Context/Units/Cu2", "logo-header.svg"),
+
                 // (new StandardUnit(Entry.Plc.Context.UnitTemplate),"Context/Units/{UnitName}", "logo-header.svg"),
                 // (new StandardUnit(Entry.Plc.Context.StarterUnitTemplate),"Context/Units/{UnitName}", "logo-axopen-no-background.svg"),
             };
