--- a/src/templates.simple/axpansion/server/Shared/NavMenu.razor
+++ b/src/templates.simple/axpansion/server/Shared/NavMenu.razor
@@ -9,6 +9,7 @@
             <ExpandableMenuItem Name="UI" Icon="oi oi-align-center">
                 <MenuItem Name="Units" Link="/Units/" Icon="oi oi-cog" />
                 <MenuItem Name="I/O" Link="/Service/Io" Icon="oi oi-cog" />
+                <MenuItem Name="Technology settings " Link="Settings/TechnologySettings" Icon="oi oi-cog"></MenuItem>
                 <MenuItem Name="Process settings" Link="Settings/ProcessSettings" Icon="oi oi-cog"></MenuItem>
                 <MenuItem Name="Process data " Link="Settings/ProcessData" Icon="oi oi-cog"></MenuItem>
                 <MenuItem Name="User administration" Link="/Security/UserAdministration" Icon="oi oi-person"></MenuItem>
