--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -6,6 +6,8 @@
 @inherits RenderableComplexComponentBase<axosimple.UnitTemplate.Unit>
 
 <Unit Component="Entry.Plc.Context.UnitTemplate"
+      SharedTechnologyData="Entry.Plc.Context.UnitTemplateTechnologyData.DataManger.Payload"
+      TechnologyData="Entry.Plc.Context.UnitTemplateTechnologyData.Shared.Entity"
       DataManger="Entry.Plc.Context.UnitTemplateProcessData"
       Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload"
       DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity">
