--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -6,9 +6,11 @@
 @inherits RenderableComplexComponentBase<axosimple.StarterUnitTemplate.Unit>
 
 <Unit Component="Entry.Plc.Context.StarterUnitTemplate"
+      SharedTechnologyData="Entry.Plc.Context.StarterUnitTemplateTechnologyData.DataManger.Payload"
+      TechnologyData="Entry.Plc.Context.StarterUnitTemplateTechnologyData.Shared.Entity"
       DataManger="Entry.Plc.Context.StarterUnitTemplateProcessData"
       Data="Entry.Plc.Context.StarterUnitTemplateProcessData.DataManger.Payload"
-      DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Shared">
+      DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity">
     <ChildContent>
         <img src="logo-header.svg"/>
     </ChildContent>
