--- a/src/templates.simple/axosimple.app/Components/Alarms.razor
+++ b/src/templates.simple/axosimple.app/Components/Alarms.razor
@@ -1,5 +1,6 @@
 ﻿@using AXOpen.Messaging.Static
 @using AXSharp.Connector
+@using AXOpen.Core
 @inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 
 @foreach (var message in Messengers)
