--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
@@ -5,6 +5,7 @@
 @using AXOpen.Data;
 @using AXOpen.Messaging.Static
 @using AXSharp.Connector;
+@using AXOpen.Core
 
 <UnitsSequences Component="@Entry.Plc.Context.PneumaticManipulator2" PollingInterval="250"></UnitsSequences>
 <UnitsService ServiceTask="@Entry.Plc.Context.PneumaticManipulator2.ServiceMode" Components="@Entry.Plc.Context.PneumaticManipulator2.Components" PollingInterval="250"></UnitsService>
