--- a/src/templates.simple/axosimple.app/Components/AlarmsButton.razor
+++ b/src/templates.simple/axosimple.app/Components/AlarmsButton.razor
@@ -1,5 +1,6 @@
 ﻿@using AXOpen.Messaging.Static
 @using AXSharp.Connector
+@using AXOpen.Core
 @inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 
 @if(MessagesCount > 0)
