--- a/src/base/src/AXOpen.VisualComposer/_Imports.razor
+++ b/src/base/src/AXOpen.VisualComposer/_Imports.razor
@@ -2,5 +2,5 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
-@using Draggable.Types;
-@using Draggable.Serializing;
+@using AXOpen.VisualComposer.Types;
+@using AXOpen.VisualComposer.Serializing;
