--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Units/ManipulatorExample"
 @using AXOpen.Base.Dialogs;
-@using Draggable
+@using AXOpen.VisualComposer;
 @using axosimple.hmi.Components;
 
 @inject IAlertDialogService _alerts
@@ -8,11 +8,11 @@
 
 <Unit Component="Entry.Plc.Context.PneumaticManipulator" Data="Entry.Plc.Context.ProcessDataPneumaticManipulator">
     <ChildContent>
-        <DraggableContainer ImgSrc="logo-header.svg" Id="@Entry.Plc.Context.PneumaticManipulator.HumanReadable">
+        <VisualComposerContainer ImgSrc="logo-header.svg" Id="@Entry.Plc.Context.PneumaticManipulator.HumanReadable">
             @foreach (var axoObject in Entry.Plc.Context.PneumaticManipulator.GetChildren().Flatten(p => p.GetChildren()).OfType<AXOpen.Core.AxoObject>())
             {
-                <DraggableItem AxoObject="axoObject" />
+                <VisualComposerItem AxoObject="axoObject" />
             }
-        </DraggableContainer>
+        </VisualComposerContainer>
     </ChildContent>
 </Unit>
