--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Context/Units/StarterUnitTemplate"
 @using AXOpen.Base.Dialogs;
+@using AXOpen.VisualComposer;
 @using axosimple.server.Components;
-
 @inject IAlertDialogService _alerts
 @inherits RenderableComplexComponentBase<axosimple.StarterUnitTemplate.Unit>
 
@@ -11,7 +11,11 @@
       DataManger="Entry.Plc.Context.StarterUnitTemplateProcessData"
       Data="Entry.Plc.Context.StarterUnitTemplateProcessData.DataManger.Payload"
       DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity">
-    <ChildContent>
-        <img src="logo-header.svg"/>
-    </ChildContent>
 </Unit>
+
+<VisualComposerContainer ImgSrc="logo-header.svg" Id="Entry.Plc.Context.StarterUnitTemplate.HumanReadable">
+    @foreach (var axoObject in Entry.Plc.Context.StarterUnitTemplate.GetChildren().Flatten(p => p.GetChildren()).OfType<AXOpen.Core.AxoObject>())
+    {
+        <VisualComposerItem AxoObject="axoObject" />
+    }
+</VisualComposerContainer>
