--- a/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
+++ b/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
@@ -108,8 +108,8 @@
                 // (new StandardUnit(Entry.Plc.Context.Cu1),"Context/Units/Cu1", "logo  -header.svg"),
                 // (new StandardUnit(Entry.Plc.Context.Cu2),"Context/Units/Cu2", "logo-header.svg"),
 
-                // (new StandardUnit(Entry.Plc.Context.UnitTemplate),"Context/Units/{UnitName}", "logo-header.svg"),
-                // (new StandardUnit(Entry.Plc.Context.StarterUnitTemplate),"Context/Units/{UnitName}", "logo-axopen-no-background.svg"),
+                (new StandardUnit(Entry.Plc.Context.UnitTemplate),"Context/Units/UnitTemplate", "logo-header.svg"),
+                (new StandardUnit(Entry.Plc.Context.StarterUnitTemplate),"Context/Units/StarterUnitTemplate", "logo-axopen-no-background.svg"),
             };
         }
     }
