--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -2,18 +2,19 @@
 @using AXOpen.Base.Dialogs;
 @using AXOpen.VisualComposer;
 @using axosimple.server.Components;
+
 @inject IAlertDialogService _alerts
 @inherits RenderableComplexComponentBase<axosimple.StarterUnitTemplate.Unit>
 
 <Unit Component="Entry.Plc.Context.StarterUnitTemplate"
-      SharedTechnologyData="Entry.Plc.Context.StarterUnitTemplateTechnologyData.DataManger.Payload"
-      TechnologyData="Entry.Plc.Context.StarterUnitTemplateTechnologyData.Shared.Entity"
+      SharedTechnologySettings="Entry.Plc.Context.StarterUnitTemplateTechnologySettings.DataManger.Payload"
+      TechnologySettings="Entry.Plc.Context.StarterUnitTemplateTechnologySettings.Shared.Entity"
       DataManger="Entry.Plc.Context.StarterUnitTemplateProcessData"
       Data="Entry.Plc.Context.StarterUnitTemplateProcessData.DataManger.Payload"
       DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity">
 </Unit>
 
-<VisualComposerContainer ImgSrc="logo-header.svg" Id="Entry.Plc.Context.StarterUnitTemplate.HumanReadable">
+<VisualComposerContainer ImgSrc="logo-header.svg" Id="@Entry.Plc.Context.StarterUnitTemplate.HumanReadable">
     @foreach (var axoObject in Entry.Plc.Context.StarterUnitTemplate.GetChildren().Flatten(p => p.GetChildren()).OfType<AXOpen.Core.AxoObject>())
     {
         <VisualComposerItem AxoObject="axoObject" />
