--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -4,7 +4,10 @@
             <img id="@_imgId" src="@ImgSrc" style="width: 100%; height: 100%; object-fit: cover;" />
             <CascadingValue Value="@this" Name="Parent" IsFixed="true">
                 <CascadingValue Value="@_imgId" Name="ImgId" IsFixed="true">
-                    @ChildContent
+                    @foreach(var child in _children)
+                    {
+                        @child
+                    }
                 </CascadingValue>
             </CascadingValue>
 
@@ -23,7 +26,7 @@
                         <div class="accordion" id="accordionExample">
                             @foreach (var item in BuildHierarchy(_children, 0))
                             {
-                                <AccordionComponent AccordionContent="@item" Level="0" BasePath="@(item.First().Id.Split('.')[0])" />
+                                <AccordionComponent AccordionContent="@item" Level="0" BasePath="@(item.First().Id.Split('.')[0])" Parent="@this" />
                             }
                         </div>
                     </div>
@@ -36,7 +39,10 @@
             <img id="@_imgId" src="@ImgSrc" style="width: 100%; height: 100%; object-fit: cover;" />
             <CascadingValue Value="@this" Name="Parent" IsFixed="true">
                 <CascadingValue Value="@_imgId" Name="ImgId" IsFixed="true">
-                    @ChildContent
+                    @foreach (var child in _children)
+                    {
+                        @child
+                    }
                 </CascadingValue>
             </CascadingValue>
         </div>
