--- a/src/base/src/AXOpen.VisualComposer/VisualComposerItem.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerItem.razor
@@ -12,7 +12,7 @@
                     @ChildContent
                 }
                 <a class="position-absolute text-decoration-none text-black" style="left: 97%; top: 0%; translate: -100% -50%; cursor: pointer;" data-bs-toggle="modal" data-bs-target="#settings-@Id.Replace('.', '_')">
-                    <span class="bi bi-gear-fill fs-4" aria-hidden="true" />
+                    <span class="bi bi-pencil-square fs-4" aria-hidden="true" />
                 </a>
             </div>
 
