--- a/src/base/src/AXOpen.VisualComposer/AccordionComponent.razor
+++ b/src/base/src/AXOpen.VisualComposer/AccordionComponent.razor
@@ -1,24 +1,29 @@
-﻿<div class="accordion-item">
+﻿@using AXSharp.Connector;
+
+<div class="accordion-item">
     <div class="accordion-header">
-        <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#@BasePath" aria-expanded="false" aria-controls="@BasePath">
-            @BasePath
-        </button>
+        <div class="input-group flex-nowrap">
+            <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#@AccordionContent.HumanReadable.Replace('.', '_')" aria-expanded="false" aria-controls="@AccordionContent.HumanReadable.Replace('.', '_')">
+                @AccordionContent.HumanReadable
+            </button>
+            <a class="text-decoration-none text-black p-2 align-self-center" style="cursor: pointer;" @onclick="() => Parent.AddChildrenToRender(AccordionContent)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
+        </div>
     </div>
-    <div id="@BasePath" class="accordion-collapse collapse">
+    <div id="@AccordionContent.HumanReadable.Replace('.', '_')" class="accordion-collapse collapse">
         <div class="accordion-body">
             <ul class="list-group">
-                @foreach (var item in VisualComposerContainer.BuildHierarchy(AccordionContent, Level + 1))
+                @foreach (var item in AccordionContent.GetChildren())
                 {
-                    @if (item.Count == 1)
+                    @if (!item.GetChildren().Any())
                     {
                         <li class="list-group-item d-flex">
-                            <p>@item.First().Id</p>
-                            <button type="button" class="btn btn-primary ms-auto" @onclick="() => Parent.AddChild(item.First())"><span class="bi bi-plus-lg" /></button>
+                            <p class="mb-0">@item.HumanReadable</p>
+                            <a class="ms-auto text-decoration-none text-black" style="cursor: pointer;" @onclick="() => Parent.AddChildrenToRender(item)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
                         </li>
                     }
                     else
                     {
-                        <AccordionComponent AccordionContent="item" Level="Level + 1" BasePath="@(BasePath + '_' + item.First().Id.Split('.')[Level + 1])" Parent="@Parent" />
+                        <AccordionComponent AccordionContent="item" Parent="@Parent" />
                     }
                 }
             </ul>
@@ -29,13 +34,7 @@
 
 @code {
     [Parameter]
-    public List<VisualComposerItem> AccordionContent { get; set; }
-
-    [Parameter]
-    public int Level { get; set; }
-
-    [Parameter]
-    public string BasePath { get; set; }
+    public ITwinObject AccordionContent { get; set; }
 
     [Parameter]
     public VisualComposerContainer Parent { get; set; }
