--- a/src/data/app/ix-blazor/librarytemplate.blazor/Shared/NavMenu.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Shared/NavMenu.razor
@@ -18,6 +18,11 @@
             <NavLink class="nav-link" href="testing">
                 <span class="oi oi-plus" aria-hidden="true"></span> Testing
             </NavLink>
+        </div> 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="TestingPersistentData">
+                <span class="oi oi-plus" aria-hidden="true"></span> Testing Persistent Data
+            </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="documentation">
