--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Context/Units/StarterUnitTemplate"
 @using AXOpen.Base.Dialogs;
+@using AXOpen.ToolBox.Extensions
 @using AXOpen.VisualComposer;
 @using axosimple.server.Components;
 
