--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Context/Units/UnitTemplate"
 @using AXOpen.Base.Dialogs;
+@using AXOpen.ToolBox.Extensions
 @using axosimple.server.Components;
 @using AXOpen.VisualComposer;
 @using AXSharp.Connector;
