--- a/src/templates.simple/axpansion/server/Components/UnitSpotView.razor
+++ b/src/templates.simple/axpansion/server/Components/UnitSpotView.razor
@@ -2,6 +2,7 @@
 @using AXOpen.Core
 @using AXOpen.Core.Blazor.Culture
 @using AXOpen.Messaging.Static
+@using AXOpen.ToolBox.Extensions
 @inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 
 
