--- a/src/base/src/AXOpen.VisualComposer/AccordionComponent.razor
+++ b/src/base/src/AXOpen.VisualComposer/AccordionComponent.razor
@@ -6,7 +6,7 @@
             <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#@AccordionContent.HumanReadable.Replace('.', '_')" aria-expanded="false" aria-controls="@AccordionContent.HumanReadable.Replace('.', '_')">
                 @AccordionContent.HumanReadable
             </button>
-            <a class="text-decoration-none text-black p-2 align-self-center" style="cursor: pointer;" @onclick="() => Parent.AddChildrenToRender(AccordionContent)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
+            <a class="text-decoration-none text-black p-2 align-self-center" style="cursor: pointer;" @onclick="() => Parent.AddChildren(AccordionContent)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
         </div>
     </div>
     <div id="@AccordionContent.HumanReadable.Replace('.', '_')" class="accordion-collapse collapse">
@@ -18,7 +18,7 @@
                     {
                         <li class="list-group-item d-flex">
                             <p class="mb-0">@item.HumanReadable</p>
-                            <a class="ms-auto text-decoration-none text-black" style="cursor: pointer;" @onclick="() => Parent.AddChildrenToRender(item)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
+                            <a class="ms-auto text-decoration-none text-black" style="cursor: pointer;" @onclick="() => Parent.AddChildren(item)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
                         </li>
                     }
                     else
